openturns/1.22/_sources/auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:


Manipulate a time series
========================

.. GENERATED FROM PYTHON SOURCE LINES 6-21

The objective here is to create and manipulate a time series.
A time series is a particular field where the mesh :math:`\mathcal{M}` 1-d and regular, eg a time grid :math:`(t_0, \dots, t_{N-1})`.

It is possible to draw a time series, using interpolation between the values: see the use case on the Field.

A time series can be obtained as a realization of a multivariate stochastic process
:math:`X: \Omega \times [0,T] \rightarrow \mathbb{R}^d` of dimension :math:`d` where :math:`[0,T]`
is discretized according to the regular grid :math:`(t_0, \dots, t_{N-1})`.
The  values :math:`(\underline{x}_0, \dots, \underline{x}_{N-1})` of the  time series are defined by:

.. math::
   \forall i \in [0, N-1],\quad \underline{x}_i= X(\omega)(t_i)


A time series is stored in the **TimeSeries** object that stores the regular time grid and the associated values.

.. GENERATED FROM PYTHON SOURCE LINES 23-29

.. code-block:: default

    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt

    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 30-31

Create the RegularGrid

.. GENERATED FROM PYTHON SOURCE LINES 31-36

.. code-block:: default

    tMin = 0.0
    timeStep = 0.1
    N = 100
    myTimeGrid = ot.RegularGrid(tMin, timeStep, N)








.. GENERATED FROM PYTHON SOURCE LINES 37-39

Case 1: Create a time series from a time grid and values
Care! The number of steps of the time grid must correspond to the size of the values

.. GENERATED FROM PYTHON SOURCE LINES 39-43

.. code-block:: default

    myValues = ot.Normal(3).getSample(myTimeGrid.getVertices().getSize())
    myTimeSeries = ot.TimeSeries(myTimeGrid, myValues)
    myTimeSeries






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=TimeSeries name=Unnamed derived from=class=FieldImplementation name=Unnamed mesh=class=Mesh name=Unnamed dimension=1 vertices=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=100 dimension=1 description=[t] data=[[0],[0.1],[0.2],[0.3],[0.4],[0.5],[0.6],[0.7],[0.8],[0.9],[1],[1.1],[1.2],[1.3],[1.4],[1.5],[1.6],[1.7],[1.8],[1.9],[2],[2.1],[2.2],[2.3],[2.4],[2.5],[2.6],[2.7],[2.8],[2.9],[3],[3.1],[3.2],[3.3],[3.4],[3.5],[3.6],[3.7],[3.8],[3.9],[4],[4.1],[4.2],[4.3],[4.4],[4.5],[4.6],[4.7],[4.8],[4.9],[5],[5.1],[5.2],[5.3],[5.4],[5.5],[5.6],[5.7],[5.8],[5.9],[6],[6.1],[6.2],[6.3],[6.4],[6.5],[6.6],[6.7],[6.8],[6.9],[7],[7.1],[7.2],[7.3],[7.4],[7.5],[7.6],[7.7],[7.8],[7.9],[8],[8.1],[8.2],[8.3],[8.4],[8.5],[8.6],[8.7],[8.8],[8.9],[9],[9.1],[9.2],[9.3],[9.4],[9.5],[9.6],[9.7],[9.8],[9.9]] simplices=[[0,1],[1,2],[2,3],[3,4],[4,5],[5,6],[6,7],[7,8],[8,9],[9,10],[10,11],[11,12],[12,13],[13,14],[14,15],[15,16],[16,17],[17,18],[18,19],[19,20],[20,21],[21,22],[22,23],[23,24],[24,25],[25,26],[26,27],[27,28],[28,29],[29,30],[30,31],[31,32],[32,33],[33,34],[34,35],[35,36],[36,37],[37,38],[38,39],[39,40],[40,41],[41,42],[42,43],[43,44],[44,45],[45,46],[46,47],[47,48],[48,49],[49,50],[50,51],[51,52],[52,53],[53,54],[54,55],[55,56],[56,57],[57,58],[58,59],[59,60],[60,61],[61,62],[62,63],[63,64],[64,65],[65,66],[66,67],[67,68],[68,69],[69,70],[70,71],[71,72],[72,73],[73,74],[74,75],[75,76],[76,77],[77,78],[78,79],[79,80],[80,81],[81,82],[82,83],[83,84],[84,85],[85,86],[86,87],[87,88],[88,89],[89,90],[90,91],[91,92],[92,93],[93,94],[94,95],[95,96],[96,97],[97,98],[98,99]] values=class=Sample name=Normal implementation=class=SampleImplementation name=Normal size=100 dimension=3 description=[X0,X1,X2] data=[[-1.40973,0.711103,-1.75418],[-1.33661,0.269893,1.41368],[0.499241,1.15854,-0.098967],[-0.650467,1.46114,0.61372],[2.14201,-1.66772,-0.151473],[2.4158,0.137289,-0.969704],[-0.292688,-1.02522,-0.354939],[-0.869302,0.266897,0.296524],[-2.24114,-1.5607,-2.272],[0.722451,-2.16128,-0.32861],[1.06975,-1.77994,-0.832708],[-0.245372,-0.0205006,-0.170101],[0.529296,-0.725104,-1.16247],[0.199523,0.727148,-0.260688],[-0.136772,0.52023,-0.659133],[-0.180673,-1.04885,0.512371],[0.20648,-0.960832,0.414682],[-1.22871,2.57497,-0.00804901],[-1.8859,0.830757,-0.378346],[0.479046,1.60938,-0.570841],[0.269096,0.803503,0.583218],[0.449756,-0.693556,1.89666],[0.0270818,-0.258272,-0.37012],[0.0456596,-0.343048,-0.392484],[-2.41093,1.93921,-0.590044],[0.22705,-0.141765,0.855507],[0.286761,0.564812,-0.509701],[1.40334,-1.37852,0.434035],[0.0342518,0.896116,-0.870577],[1.36995,0.272597,0.579223],[-1.5321,0.957065,0.427663],[-0.36668,0.648699,-0.00464944],[0.171548,-0.0795761,0.455389],[-2.14009,0.933245,0.818686],[-1.54826,0.370246,-0.773089],[-0.0129833,0.187309,-2.13145],[-1.19768,-0.00500185,-0.125673],[-1.89201,3.40565,-0.103576],[0.415448,0.727255,0.978855],[1.15808,0.295275,0.283934],[1.29426,0.200773,0.342265],[0.164085,-0.608383,0.144346],[0.537733,0.696557,1.18791],[2.18097,-0.194809,0.628316],[0.230866,-0.648071,-0.0280203],[0.871005,1.24473,-0.106358],[-0.234489,-2.0102,0.121701],[-1.33163,-0.825457,-1.21658],[-1.02579,-1.22486,-0.735057],[0.267431,-0.313967,0.328403],[-1.18542,0.272577,-0.537997],[-0.154628,0.0348939,0.357208],[0.87381,-1.4897,-1.60323],[0.276884,-0.205279,0.313591],[1.52063,2.12789,0.15741],[0.056432,1.05201,-1.06929],[0.0389696,0.108862,1.56022],[0.897858,0.0713179,0.329058],[0.768345,-0.201722,0.148307],[0.498826,-0.540609,0.202215],[1.52964,-1.19218,0.524954],[-0.127176,1.00122,0.299567],[-0.0732479,-0.592801,0.509773],[1.56808,0.369343,0.687346],[0.26022,1.5601,0.68388],[-0.260408,0.169652,-1.01657],[0.810285,-0.934548,0.440233],[0.102655,0.16255,0.977606],[-0.685128,-0.0411968,-0.161531],[0.00948899,-0.699237,0.835643],[0.961209,-0.395342,0.250509],[-1.71279,-0.303372,1.71343],[0.287997,-0.346204,-1.24308],[-0.661934,-0.539626,0.78918],[0.525199,0.265505,-0.615353],[0.667728,-0.320656,-0.00603524],[-1.44043,0.0706512,0.400517],[-0.537003,-2.13043,0.186229],[-1.32629,0.242601,-0.897333],[-0.957364,1.58824,-0.238077],[-0.654398,1.49892,-0.713136],[-1.33516,0.567629,0.640198],[-0.259729,0.192286,-1.40222],[0.560018,-1.35624,1.03452],[-0.378793,-0.125727,-0.587836],[1.07894,-1.66939,1.70834],[-0.845941,-0.178621,-0.195884],[1.81133,0.400036,1.10812],[-0.455236,-0.793417,2.28383],[0.351885,-0.0608221,1.18257],[2.05724,2.0836,-1.10946],[0.646117,0.314088,-1.25919],[2.51347,1.10677,-1.23708],[-0.405063,1.24478,0.258866],[-0.1138,0.3815,0.155791],[0.402412,1.33272,-0.805619],[0.385421,-1.61086,-0.687429],[-0.021074,-1.40527,-0.602909],[-0.0745371,-0.287633,-0.402623],[-0.489432,-0.580339,1.19649]] start=0 timeStep=0.1 n=100
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 44-45

Case 2: Get a time series from a Process

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. code-block:: default

    myProcess = ot.WhiteNoise(ot.Normal(3), myTimeGrid)
    myTimeSeries2 = myProcess.getRealization()
    myTimeSeries2






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>t</th><th>X0</th><th>X1</th><th>X2</th></tr>
      <tr><th>0</th><td>0</td><td>1.004556</td><td>0.5372572</td><td>-0.08770909</td></tr>
      <tr><th>1</th><td>0.1</td><td>1.423935</td><td>0.6820146</td><td>2.884055</td></tr>
      <tr><th>2</th><td>0.2</td><td>0.2796988</td><td>-1.178997</td><td>-0.143892</td></tr>
      <tr><th>3</th><td>0.3</td><td>0.6813079</td><td>0.01437919</td><td>0.5099701</td></tr>
      <tr><th>4</th><td>0.4</td><td>-1.060234</td><td>0.04483657</td><td>0.2499197</td></tr>
      <tr><th>5</th><td>0.5</td><td>1.24773</td><td>-0.3856004</td><td>-0.2880728</td></tr>
      <tr><th>6</th><td>0.6</td><td>-0.5890517</td><td>0.4995753</td><td>1.132313</td></tr>
      <tr><th>7</th><td>0.7</td><td>-0.8437811</td><td>1.43619</td><td>-0.1876503</td></tr>
      <tr><th>8</th><td>0.8</td><td>0.940522</td><td>0.7151117</td><td>-1.439318</td></tr>
      <tr><th>9</th><td>0.9</td><td>-0.1429401</td><td>-0.1765888</td><td>0.9054335</td></tr>
      <tr><th>10</th><td>1</td><td>0.6688361</td><td>-0.1848348</td><td>-0.2056171</td></tr>
      <tr><th>11</th><td>1.1</td><td>0.8539061</td><td>1.082717</td><td>0.7860448</td></tr>
      <tr><th>12</th><td>1.2</td><td>-1.839514</td><td>-0.4807376</td><td>-0.7431111</td></tr>
      <tr><th>13</th><td>1.3</td><td>0.2583894</td><td>0.06498678</td><td>0.8220976</td></tr>
      <tr><th>14</th><td>1.4</td><td>-0.2202976</td><td>-1.267407</td><td>0.06548754</td></tr>
      <tr><th>15</th><td>1.5</td><td>-2.506485</td><td>0.2182682</td><td>-0.3734256</td></tr>
      <tr><th>16</th><td>1.6</td><td>-0.3483342</td><td>-1.020392</td><td>-0.9373684</td></tr>
      <tr><th>17</th><td>1.7</td><td>0.793814</td><td>-0.983334</td><td>-0.4151898</td></tr>
      <tr><th>18</th><td>1.8</td><td>0.1049272</td><td>-0.4991656</td><td>0.3643877</td></tr>
      <tr><th>19</th><td>1.9</td><td>-0.1627931</td><td>0.4925782</td><td>0.3548167</td></tr>
      <tr><th>20</th><td>2</td><td>-0.8811936</td><td>-0.819895</td><td>-2.106536</td></tr>
      <tr><th>21</th><td>2.1</td><td>0.1773956</td><td>-0.04881701</td><td>-0.9867962</td></tr>
      <tr><th>22</th><td>2.2</td><td>-0.8862132</td><td>1.219161</td><td>0.266691</td></tr>
      <tr><th>23</th><td>2.3</td><td>0.188304</td><td>0.8090514</td><td>1.619885</td></tr>
      <tr><th>24</th><td>2.4</td><td>-0.5646788</td><td>-0.9921044</td><td>0.7245245</td></tr>
      <tr><th>25</th><td>2.5</td><td>0.3057475</td><td>-0.4119946</td><td>2.759856</td></tr>
      <tr><th>26</th><td>2.6</td><td>0.4088039</td><td>1.121707</td><td>-0.6501654</td></tr>
      <tr><th>27</th><td>2.7</td><td>-1.034288</td><td>1.150379</td><td>0.5587453</td></tr>
      <tr><th>28</th><td>2.8</td><td>1.332409</td><td>-0.3225148</td><td>0.4750779</td></tr>
      <tr><th>29</th><td>2.9</td><td>-0.1536095</td><td>1.035535</td><td>1.381175</td></tr>
      <tr><th>30</th><td>3</td><td>1.225896</td><td>-0.1056646</td><td>0.3069166</td></tr>
      <tr><th>31</th><td>3.1</td><td>0.4924758</td><td>0.4262604</td><td>-0.5698308</td></tr>
      <tr><th>32</th><td>3.2</td><td>-0.4156163</td><td>-2.609303</td><td>-2.173168</td></tr>
      <tr><th>33</th><td>3.3</td><td>-1.324497</td><td>-1.45585</td><td>0.1801837</td></tr>
      <tr><th>34</th><td>3.4</td><td>1.421198</td><td>1.866039</td><td>-0.1742316</td></tr>
      <tr><th>35</th><td>3.5</td><td>-1.55547</td><td>1.4884</td><td>1.303924</td></tr>
      <tr><th>36</th><td>3.6</td><td>-1.061323</td><td>-1.305955</td><td>-1.629615</td></tr>
      <tr><th>37</th><td>3.7</td><td>-0.2962869</td><td>0.8739792</td><td>0.1051378</td></tr>
      <tr><th>38</th><td>3.8</td><td>-0.02998592</td><td>-1.516032</td><td>1.474471</td></tr>
      <tr><th>39</th><td>3.9</td><td>-1.03669</td><td>-1.534651</td><td>0.8259901</td></tr>
      <tr><th>40</th><td>4</td><td>0.457382</td><td>-0.3865615</td><td>1.28411</td></tr>
      <tr><th>41</th><td>4.1</td><td>-0.3259461</td><td>1.637177</td><td>-0.8420178</td></tr>
      <tr><th>42</th><td>4.2</td><td>-0.2924097</td><td>0.3615991</td><td>0.4570965</td></tr>
      <tr><th>43</th><td>4.3</td><td>0.237978</td><td>1.020826</td><td>1.699262</td></tr>
      <tr><th>44</th><td>4.4</td><td>-0.5438809</td><td>0.4973056</td><td>-1.469904</td></tr>
      <tr><th>45</th><td>4.5</td><td>-2.294773</td><td>-0.2623551</td><td>-1.554523</td></tr>
      <tr><th>46</th><td>4.6</td><td>-2.82731</td><td>0.5825531</td><td>0.4139608</td></tr>
      <tr><th>47</th><td>4.7</td><td>-0.9302437</td><td>0.549059</td><td>-0.69065</td></tr>
      <tr><th>48</th><td>4.8</td><td>-0.6021352</td><td>-0.7677184</td><td>1.285077</td></tr>
      <tr><th>49</th><td>4.9</td><td>-0.22259</td><td>1.221741</td><td>0.4439343</td></tr>
      <tr><th>50</th><td>5</td><td>-0.7078664</td><td>-1.056912</td><td>0.5648551</td></tr>
      <tr><th>51</th><td>5.1</td><td>0.2980986</td><td>1.342418</td><td>1.085837</td></tr>
      <tr><th>52</th><td>5.2</td><td>0.8239627</td><td>-0.6283856</td><td>-0.8834576</td></tr>
      <tr><th>53</th><td>5.3</td><td>0.8607533</td><td>1.456264</td><td>0.1421699</td></tr>
      <tr><th>54</th><td>5.4</td><td>-0.3323323</td><td>0.8952978</td><td>0.1655028</td></tr>
      <tr><th>55</th><td>5.5</td><td>0.02714461</td><td>0.1645807</td><td>0.2626963</td></tr>
      <tr><th>56</th><td>5.6</td><td>1.638611</td><td>0.1818056</td><td>-0.1240066</td></tr>
      <tr><th>57</th><td>5.7</td><td>1.56386</td><td>-0.5471615</td><td>0.4136208</td></tr>
      <tr><th>58</th><td>5.8</td><td>-0.5009097</td><td>-1.561814</td><td>-2.157897</td></tr>
      <tr><th>59</th><td>5.9</td><td>-0.8845609</td><td>-0.03278067</td><td>-0.4371368</td></tr>
      <tr><th>60</th><td>6</td><td>0.9263022</td><td>0.3640217</td><td>1.127778</td></tr>
      <tr><th>61</th><td>6.1</td><td>-0.2958129</td><td>0.521623</td><td>-0.5048369</td></tr>
      <tr><th>62</th><td>6.2</td><td>-1.126024</td><td>-0.1538759</td><td>0.9138794</td></tr>
      <tr><th>63</th><td>6.3</td><td>-2.058274</td><td>1.093646</td><td>0.353957</td></tr>
      <tr><th>64</th><td>6.4</td><td>-0.5708488</td><td>1.521397</td><td>0.2852253</td></tr>
      <tr><th>65</th><td>6.5</td><td>-1.835236</td><td>-0.3044852</td><td>0.9165636</td></tr>
      <tr><th>66</th><td>6.6</td><td>0.9140664</td><td>0.1075705</td><td>0.06927429</td></tr>
      <tr><th>67</th><td>6.7</td><td>-0.6650488</td><td>1.951216</td><td>0.7997068</td></tr>
      <tr><th>68</th><td>6.8</td><td>-0.8125796</td><td>-0.5797791</td><td>0.1117721</td></tr>
      <tr><th>69</th><td>6.9</td><td>-0.2133026</td><td>-1.116885</td><td>-0.872058</td></tr>
      <tr><th>70</th><td>7</td><td>1.629164</td><td>3.399959</td><td>-0.9405087</td></tr>
      <tr><th>71</th><td>7.1</td><td>0.8080016</td><td>-0.5450092</td><td>1.626903</td></tr>
      <tr><th>72</th><td>7.2</td><td>-0.06128802</td><td>0.308256</td><td>-0.9618253</td></tr>
      <tr><th>73</th><td>7.3</td><td>-1.255094</td><td>0.4358796</td><td>-0.7273887</td></tr>
      <tr><th>74</th><td>7.4</td><td>-0.3513546</td><td>-1.318261</td><td>-0.47417</td></tr>
      <tr><th>75</th><td>7.5</td><td>-0.1005602</td><td>1.643525</td><td>-0.4139103</td></tr>
      <tr><th>76</th><td>7.6</td><td>0.8686027</td><td>-0.4322521</td><td>1.012874</td></tr>
      <tr><th>77</th><td>7.7</td><td>-1.114927</td><td>0.469528</td><td>0.9161205</td></tr>
      <tr><th>78</th><td>7.8</td><td>-0.356955</td><td>1.022334</td><td>-2.00257</td></tr>
      <tr><th>79</th><td>7.9</td><td>-1.71516</td><td>0.6274581</td><td>-1.352094</td></tr>
      <tr><th>80</th><td>8</td><td>-0.03491598</td><td>-0.03793251</td><td>0.05596954</td></tr>
      <tr><th>81</th><td>8.1</td><td>-0.2810947</td><td>0.144073</td><td>-2.171863</td></tr>
      <tr><th>82</th><td>8.2</td><td>-0.3389453</td><td>0.5843859</td><td>-0.8390798</td></tr>
      <tr><th>83</th><td>8.3</td><td>-1.04138</td><td>0.3519497</td><td>1.069267</td></tr>
      <tr><th>84</th><td>8.4</td><td>-2.866462</td><td>1.182504</td><td>0.2067203</td></tr>
      <tr><th>85</th><td>8.5</td><td>-0.6907754</td><td>-0.7425984</td><td>1.164752</td></tr>
      <tr><th>86</th><td>8.6</td><td>-0.09003073</td><td>-1.209451</td><td>0.7730654</td></tr>
      <tr><th>87</th><td>8.7</td><td>-0.8069562</td><td>-1.046643</td><td>0.1396704</td></tr>
      <tr><th>88</th><td>8.8</td><td>1.067365</td><td>0.1232827</td><td>-0.776005</td></tr>
      <tr><th>89</th><td>8.9</td><td>-0.882326</td><td>-0.0145659</td><td>0.2200673</td></tr>
      <tr><th>90</th><td>9</td><td>0.4727389</td><td>-0.3159074</td><td>1.723677</td></tr>
      <tr><th>91</th><td>9.1</td><td>0.5338985</td><td>0.4875888</td><td>-0.5419431</td></tr>
      <tr><th>92</th><td>9.2</td><td>0.7959215</td><td>-0.9714537</td><td>-0.3666259</td></tr>
      <tr><th>93</th><td>9.3</td><td>0.1363355</td><td>1.229809</td><td>-0.4606246</td></tr>
      <tr><th>94</th><td>9.4</td><td>0.5330227</td><td>-0.9875807</td><td>0.2573491</td></tr>
      <tr><th>95</th><td>9.5</td><td>0.415046</td><td>-0.7534109</td><td>0.07963906</td></tr>
      <tr><th>96</th><td>9.6</td><td>0.5442014</td><td>-1.354907</td><td>-0.03364811</td></tr>
      <tr><th>97</th><td>9.7</td><td>-0.7464795</td><td>-0.6355808</td><td>0.7484256</td></tr>
      <tr><th>98</th><td>9.8</td><td>-1.11568</td><td>0.1287166</td><td>0.8080038</td></tr>
      <tr><th>99</th><td>9.9</td><td>-0.5232872</td><td>-0.02984434</td><td>0.04724269</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 50-51

Get the number of values of the time series

.. GENERATED FROM PYTHON SOURCE LINES 51-53

.. code-block:: default

    myTimeSeries.getSize()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    100



.. GENERATED FROM PYTHON SOURCE LINES 54-55

Get the dimension of the values observed at each time

.. GENERATED FROM PYTHON SOURCE LINES 55-57

.. code-block:: default

    myTimeSeries.getMesh().getDimension()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    1



.. GENERATED FROM PYTHON SOURCE LINES 58-59

Get the value Xi at index i

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: default

    i = 37
    print("Xi = ", myTimeSeries.getValueAtIndex(i))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Xi =  [-1.89201,3.40565,-0.103576]




.. GENERATED FROM PYTHON SOURCE LINES 63-64

Get the time series at index i : Xi

.. GENERATED FROM PYTHON SOURCE LINES 64-67

.. code-block:: default

    i = 37
    print("Xi = ", myTimeSeries[i])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Xi =  [-1.89201,3.40565,-0.103576]




.. GENERATED FROM PYTHON SOURCE LINES 68-69

Get a the marginal value at index i of the time series

.. GENERATED FROM PYTHON SOURCE LINES 69-75

.. code-block:: default

    i = 37
    # get the time stamp:
    print("ti = ", myTimeSeries.getTimeGrid().getValue(i))
    # get the first component of the corresponding value :
    print("Xi1 = ", myTimeSeries[i, 0])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ti =  3.7
    Xi1 =  -1.892006989486264




.. GENERATED FROM PYTHON SOURCE LINES 76-77

Get all the values (X1, .., Xn) of the time series

.. GENERATED FROM PYTHON SOURCE LINES 77-79

.. code-block:: default

    myTimeSeries.getValues()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>X0</th><th>X1</th><th>X2</th></tr>
      <tr><th>0</th><td>-1.409734</td><td>0.7111029</td><td>-1.754176</td></tr>
      <tr><th>1</th><td>-1.336608</td><td>0.2698927</td><td>1.413675</td></tr>
      <tr><th>2</th><td>0.4992414</td><td>1.158536</td><td>-0.09896703</td></tr>
      <tr><th>3</th><td>-0.6504669</td><td>1.461145</td><td>0.6137203</td></tr>
      <tr><th>4</th><td>2.142012</td><td>-1.667722</td><td>-0.1514732</td></tr>
      <tr><th>5</th><td>2.4158</td><td>0.1372886</td><td>-0.9697043</td></tr>
      <tr><th>6</th><td>-0.292688</td><td>-1.025222</td><td>-0.3549386</td></tr>
      <tr><th>7</th><td>-0.8693017</td><td>0.266897</td><td>0.296524</td></tr>
      <tr><th>8</th><td>-2.241144</td><td>-1.560704</td><td>-2.271998</td></tr>
      <tr><th>9</th><td>0.7224505</td><td>-2.161275</td><td>-0.3286104</td></tr>
      <tr><th>10</th><td>1.069747</td><td>-1.779941</td><td>-0.8327076</td></tr>
      <tr><th>11</th><td>-0.2453716</td><td>-0.0205006</td><td>-0.1701006</td></tr>
      <tr><th>12</th><td>0.5292955</td><td>-0.7251038</td><td>-1.162473</td></tr>
      <tr><th>13</th><td>0.1995235</td><td>0.7271477</td><td>-0.2606875</td></tr>
      <tr><th>14</th><td>-0.1367718</td><td>0.5202298</td><td>-0.6591333</td></tr>
      <tr><th>15</th><td>-0.1806734</td><td>-1.048847</td><td>0.5123711</td></tr>
      <tr><th>16</th><td>0.2064803</td><td>-0.960832</td><td>0.4146824</td></tr>
      <tr><th>17</th><td>-1.228714</td><td>2.57497</td><td>-0.008049008</td></tr>
      <tr><th>18</th><td>-1.885899</td><td>0.830757</td><td>-0.3783459</td></tr>
      <tr><th>19</th><td>0.4790463</td><td>1.609382</td><td>-0.5708413</td></tr>
      <tr><th>20</th><td>0.2690964</td><td>0.8035033</td><td>0.5832181</td></tr>
      <tr><th>21</th><td>0.4497564</td><td>-0.6935559</td><td>1.896662</td></tr>
      <tr><th>22</th><td>0.02708176</td><td>-0.258272</td><td>-0.37012</td></tr>
      <tr><th>23</th><td>0.04565963</td><td>-0.3430478</td><td>-0.3924844</td></tr>
      <tr><th>24</th><td>-2.410929</td><td>1.939206</td><td>-0.5900438</td></tr>
      <tr><th>25</th><td>0.2270499</td><td>-0.1417654</td><td>0.8555065</td></tr>
      <tr><th>26</th><td>0.286761</td><td>0.5648119</td><td>-0.5097008</td></tr>
      <tr><th>27</th><td>1.403344</td><td>-1.378522</td><td>0.4340351</td></tr>
      <tr><th>28</th><td>0.03425181</td><td>0.8961165</td><td>-0.8705775</td></tr>
      <tr><th>29</th><td>1.369953</td><td>0.2725969</td><td>0.5792226</td></tr>
      <tr><th>30</th><td>-1.532103</td><td>0.957065</td><td>0.4276634</td></tr>
      <tr><th>31</th><td>-0.3666802</td><td>0.6486989</td><td>-0.004649441</td></tr>
      <tr><th>32</th><td>0.1715484</td><td>-0.07957611</td><td>0.4553892</td></tr>
      <tr><th>33</th><td>-2.140093</td><td>0.9332446</td><td>0.8186856</td></tr>
      <tr><th>34</th><td>-1.548256</td><td>0.370246</td><td>-0.773089</td></tr>
      <tr><th>35</th><td>-0.01298333</td><td>0.1873089</td><td>-2.131449</td></tr>
      <tr><th>36</th><td>-1.197682</td><td>-0.005001849</td><td>-0.1256726</td></tr>
      <tr><th>37</th><td>-1.892007</td><td>3.40565</td><td>-0.1035762</td></tr>
      <tr><th>38</th><td>0.4154477</td><td>0.7272545</td><td>0.9788553</td></tr>
      <tr><th>39</th><td>1.158081</td><td>0.2952752</td><td>0.2839339</td></tr>
      <tr><th>40</th><td>1.294258</td><td>0.2007735</td><td>0.342265</td></tr>
      <tr><th>41</th><td>0.1640854</td><td>-0.6083832</td><td>0.1443463</td></tr>
      <tr><th>42</th><td>0.5377329</td><td>0.6965567</td><td>1.187906</td></tr>
      <tr><th>43</th><td>2.180975</td><td>-0.1948093</td><td>0.6283156</td></tr>
      <tr><th>44</th><td>0.2308662</td><td>-0.6480712</td><td>-0.02802031</td></tr>
      <tr><th>45</th><td>0.8710046</td><td>1.244731</td><td>-0.1063582</td></tr>
      <tr><th>46</th><td>-0.2344887</td><td>-2.010204</td><td>0.1217012</td></tr>
      <tr><th>47</th><td>-1.331632</td><td>-0.8254575</td><td>-1.216578</td></tr>
      <tr><th>48</th><td>-1.025789</td><td>-1.224865</td><td>-0.7350567</td></tr>
      <tr><th>49</th><td>0.2674311</td><td>-0.3139666</td><td>0.3284034</td></tr>
      <tr><th>50</th><td>-1.185418</td><td>0.2725766</td><td>-0.5379969</td></tr>
      <tr><th>51</th><td>-0.1546276</td><td>0.03489387</td><td>0.3572081</td></tr>
      <tr><th>52</th><td>0.8738098</td><td>-1.489697</td><td>-1.603233</td></tr>
      <tr><th>53</th><td>0.2768838</td><td>-0.2052791</td><td>0.3135911</td></tr>
      <tr><th>54</th><td>1.520626</td><td>2.127892</td><td>0.1574096</td></tr>
      <tr><th>55</th><td>0.05643199</td><td>1.05201</td><td>-1.069286</td></tr>
      <tr><th>56</th><td>0.03896958</td><td>0.1088619</td><td>1.560223</td></tr>
      <tr><th>57</th><td>0.8978581</td><td>0.07131786</td><td>0.3290581</td></tr>
      <tr><th>58</th><td>0.7683447</td><td>-0.2017215</td><td>0.1483074</td></tr>
      <tr><th>59</th><td>0.4988259</td><td>-0.5406089</td><td>0.202215</td></tr>
      <tr><th>60</th><td>1.52964</td><td>-1.192179</td><td>0.5249542</td></tr>
      <tr><th>61</th><td>-0.1271758</td><td>1.001217</td><td>0.2995675</td></tr>
      <tr><th>62</th><td>-0.07324792</td><td>-0.5928008</td><td>0.509773</td></tr>
      <tr><th>63</th><td>1.568079</td><td>0.3693428</td><td>0.6873462</td></tr>
      <tr><th>64</th><td>0.2602205</td><td>1.560101</td><td>0.6838802</td></tr>
      <tr><th>65</th><td>-0.2604079</td><td>0.1696515</td><td>-1.016573</td></tr>
      <tr><th>66</th><td>0.8102853</td><td>-0.9345477</td><td>0.4402335</td></tr>
      <tr><th>67</th><td>0.1026545</td><td>0.1625502</td><td>0.9776058</td></tr>
      <tr><th>68</th><td>-0.6851276</td><td>-0.04119683</td><td>-0.1615313</td></tr>
      <tr><th>69</th><td>0.009488993</td><td>-0.6992373</td><td>0.8356431</td></tr>
      <tr><th>70</th><td>0.9612086</td><td>-0.3953424</td><td>0.2505092</td></tr>
      <tr><th>71</th><td>-1.712787</td><td>-0.3033722</td><td>1.713433</td></tr>
      <tr><th>72</th><td>0.2879968</td><td>-0.3462038</td><td>-1.243077</td></tr>
      <tr><th>73</th><td>-0.6619336</td><td>-0.5396257</td><td>0.7891796</td></tr>
      <tr><th>74</th><td>0.525199</td><td>0.2655049</td><td>-0.6153533</td></tr>
      <tr><th>75</th><td>0.6677281</td><td>-0.3206562</td><td>-0.00603524</td></tr>
      <tr><th>76</th><td>-1.440427</td><td>0.07065125</td><td>0.4005165</td></tr>
      <tr><th>77</th><td>-0.5370034</td><td>-2.130432</td><td>0.1862285</td></tr>
      <tr><th>78</th><td>-1.326288</td><td>0.2426011</td><td>-0.8973327</td></tr>
      <tr><th>79</th><td>-0.9573643</td><td>1.588237</td><td>-0.2380769</td></tr>
      <tr><th>80</th><td>-0.6543979</td><td>1.498919</td><td>-0.7131357</td></tr>
      <tr><th>81</th><td>-1.335157</td><td>0.5676285</td><td>0.640198</td></tr>
      <tr><th>82</th><td>-0.259729</td><td>0.1922855</td><td>-1.402221</td></tr>
      <tr><th>83</th><td>0.5600177</td><td>-1.356244</td><td>1.034522</td></tr>
      <tr><th>84</th><td>-0.3787931</td><td>-0.1257271</td><td>-0.5878356</td></tr>
      <tr><th>85</th><td>1.078941</td><td>-1.669386</td><td>1.708344</td></tr>
      <tr><th>86</th><td>-0.8459409</td><td>-0.1786205</td><td>-0.1958844</td></tr>
      <tr><th>87</th><td>1.811325</td><td>0.4000363</td><td>1.108118</td></tr>
      <tr><th>88</th><td>-0.4552358</td><td>-0.7934174</td><td>2.283829</td></tr>
      <tr><th>89</th><td>0.351885</td><td>-0.06082214</td><td>1.182574</td></tr>
      <tr><th>90</th><td>2.057236</td><td>2.083603</td><td>-1.109457</td></tr>
      <tr><th>91</th><td>0.6461174</td><td>0.3140881</td><td>-1.259195</td></tr>
      <tr><th>92</th><td>2.51347</td><td>1.106768</td><td>-1.237082</td></tr>
      <tr><th>93</th><td>-0.4050629</td><td>1.244775</td><td>0.2588656</td></tr>
      <tr><th>94</th><td>-0.1137998</td><td>0.3814998</td><td>0.1557911</td></tr>
      <tr><th>95</th><td>0.4024124</td><td>1.332716</td><td>-0.8056192</td></tr>
      <tr><th>96</th><td>0.3854209</td><td>-1.61086</td><td>-0.6874292</td></tr>
      <tr><th>97</th><td>-0.02107395</td><td>-1.405266</td><td>-0.6029087</td></tr>
      <tr><th>98</th><td>-0.07453712</td><td>-0.287633</td><td>-0.4026233</td></tr>
      <tr><th>99</th><td>-0.4894317</td><td>-0.5803388</td><td>1.196489</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 80-82

Compute the temporal Mean
It corresponds to the mean of the values of the time series

.. GENERATED FROM PYTHON SOURCE LINES 82-84

.. code-block:: default

    myTimeSeries.getInputMean()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=Point name=Unnamed dimension=3 values=[0.0252771,0.032915,0.00141464]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 85-86

Draw the marginal i of the time series using linear interpolation

.. GENERATED FROM PYTHON SOURCE LINES 86-89

.. code-block:: default

    graph = myTimeSeries.drawMarginal(0)
    view = viewer.View(graph)




.. image-sg:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_001.png
   :alt: Unnamed - 0 marginal
   :srcset: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 90-91

with no interpolation

.. GENERATED FROM PYTHON SOURCE LINES 91-94

.. code-block:: default

    graph = myTimeSeries.drawMarginal(0, False)
    view = viewer.View(graph)
    plt.show()



.. image-sg:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_002.png
   :alt: Unnamed - 0 marginal
   :srcset: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_002.png
   :class: sphx-glr-single-img






.. _sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_timeseries_manipulation.py <plot_timeseries_manipulation.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_timeseries_manipulation.ipynb <plot_timeseries_manipulation.ipynb>`
