openturns/1.24/_sources/auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:


Manipulate a time series
========================

.. GENERATED FROM PYTHON SOURCE LINES 7-22

The objective here is to create and manipulate a time series.
A time series is a particular field where the mesh :math:`\mathcal{M}` 1-d and regular, eg a time grid :math:`(t_0, \dots, t_{N-1})`.

It is possible to draw a time series, using interpolation between the values: see the use case on the Field.

A time series can be obtained as a realization of a multivariate stochastic process
:math:`X: \Omega \times [0,T] \rightarrow \mathbb{R}^d` of dimension :math:`d` where :math:`[0,T]`
is discretized according to the regular grid :math:`(t_0, \dots, t_{N-1})`.
The  values :math:`(\vect{x}_0, \dots, \vect{x}_{N-1})` of the  time series are defined by:

.. math::
   \forall i \in [0, N-1],\quad \vect{x}_i= X(\omega)(t_i)


A time series is stored in the :class:`~openturns.TimeSeries` object that stores the regular time grid and the associated values.

.. GENERATED FROM PYTHON SOURCE LINES 24-30

.. code-block:: Python

    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt

    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 31-32

Create the RegularGrid

.. GENERATED FROM PYTHON SOURCE LINES 32-37

.. code-block:: Python

    tMin = 0.0
    timeStep = 0.1
    N = 100
    myTimeGrid = ot.RegularGrid(tMin, timeStep, N)








.. GENERATED FROM PYTHON SOURCE LINES 38-40

Case 1: Create a time series from a time grid and values.
Be careful that the number of steps of the time grid must correspond to the size of the values

.. GENERATED FROM PYTHON SOURCE LINES 40-44

.. code-block:: Python

    myValues = ot.Normal(3).getSample(myTimeGrid.getVertices().getSize())
    myTimeSeries = ot.TimeSeries(myTimeGrid, myValues)
    myTimeSeries






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=TimeSeries name=Unnamed derived from=class=FieldImplementation name=Unnamed mesh=class=Mesh name=Unnamed dimension=1 vertices=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=100 dimension=1 description=[t] data=[[0],[0.1],[0.2],[0.3],[0.4],[0.5],[0.6],[0.7],[0.8],[0.9],[1],[1.1],[1.2],[1.3],[1.4],[1.5],[1.6],[1.7],[1.8],[1.9],[2],[2.1],[2.2],[2.3],[2.4],[2.5],[2.6],[2.7],[2.8],[2.9],[3],[3.1],[3.2],[3.3],[3.4],[3.5],[3.6],[3.7],[3.8],[3.9],[4],[4.1],[4.2],[4.3],[4.4],[4.5],[4.6],[4.7],[4.8],[4.9],[5],[5.1],[5.2],[5.3],[5.4],[5.5],[5.6],[5.7],[5.8],[5.9],[6],[6.1],[6.2],[6.3],[6.4],[6.5],[6.6],[6.7],[6.8],[6.9],[7],[7.1],[7.2],[7.3],[7.4],[7.5],[7.6],[7.7],[7.8],[7.9],[8],[8.1],[8.2],[8.3],[8.4],[8.5],[8.6],[8.7],[8.8],[8.9],[9],[9.1],[9.2],[9.3],[9.4],[9.5],[9.6],[9.7],[9.8],[9.9]] simplices=[[0,1],[1,2],[2,3],[3,4],[4,5],[5,6],[6,7],[7,8],[8,9],[9,10],[10,11],[11,12],[12,13],[13,14],[14,15],[15,16],[16,17],[17,18],[18,19],[19,20],[20,21],[21,22],[22,23],[23,24],[24,25],[25,26],[26,27],[27,28],[28,29],[29,30],[30,31],[31,32],[32,33],[33,34],[34,35],[35,36],[36,37],[37,38],[38,39],[39,40],[40,41],[41,42],[42,43],[43,44],[44,45],[45,46],[46,47],[47,48],[48,49],[49,50],[50,51],[51,52],[52,53],[53,54],[54,55],[55,56],[56,57],[57,58],[58,59],[59,60],[60,61],[61,62],[62,63],[63,64],[64,65],[65,66],[66,67],[67,68],[68,69],[69,70],[70,71],[71,72],[72,73],[73,74],[74,75],[75,76],[76,77],[77,78],[78,79],[79,80],[80,81],[81,82],[82,83],[83,84],[84,85],[85,86],[86,87],[87,88],[88,89],[89,90],[90,91],[91,92],[92,93],[93,94],[94,95],[95,96],[96,97],[97,98],[98,99]] values=class=Sample name=Normal implementation=class=SampleImplementation name=Normal size=100 dimension=3 description=[X0,X1,X2] data=[[-1.13391,1.11253,1.36174],[-1.74809,0.383713,-2.46312],[2.2449,-0.340437,0.163855],[-1.5055,-0.601201,0.555995],[-0.0887355,0.702823,-0.115196],[-0.730212,-0.805437,-0.58081],[-0.496175,1.09338,0.249693],[-0.901036,0.905895,0.893699],[0.161728,0.312893,-0.810711],[-1.86911,-0.303663,0.339052],[-0.395927,0.325427,-1.38781],[-0.287769,0.0354446,-0.553972],[-0.995484,-2.06273,-0.726609],[-0.476489,0.235649,-0.270249],[0.463356,1.31516,0.49487],[0.50402,-0.53994,-1.20516],[0.0198615,-1.05896,-0.233806],[-1.42046,-1.12081,-0.781158],[-0.0321276,0.1709,-0.0990855],[-0.538571,0.342895,-0.72669],[-0.153221,-0.0402347,0.160775],[-0.267171,-0.880702,-1.03751],[-1.86623,-0.556986,0.450027],[-1.20641,0.080394,0.719824],[1.99783,1.14581,0.369987],[1.91743,0.488312,-0.422998],[0.722029,-2.50151,1.81337],[-0.830122,-0.64971,-0.306279],[-0.963223,-0.558063,0.175845],[-1.28119,-0.210817,-0.564566],[1.003,-3.75175,-0.269742],[-0.133496,0.794426,-0.0692603],[0.445947,1.35672,1.31248],[0.198226,0.0487524,-1.57416],[1.82061,-0.999249,-0.243183],[0.0118725,-0.48074,0.407656],[0.645632,0.0450102,0.246284],[0.160454,0.540924,0.0844227],[0.505927,1.26057,-0.291351],[1.33883,1.61707,-0.569053],[-0.1108,0.347105,0.83637],[-0.0128298,-1.24173,-0.817787],[1.51072,-1.3515,-2.29294],[-2.61104,1.55876,-0.768569],[-0.429419,-0.944546,0.877859],[0.0786269,-1.95074,-1.75899],[-0.126977,-1.7022,0.970106],[-0.731371,0.528002,0.107076],[0.0874114,-0.808733,1.32812],[-1.50104,0.0898066,0.053238],[-1.68497,-0.855623,0.725374],[1.09379,-2.11517,0.327126],[0.114978,-0.957608,0.858211],[-1.09684,1.36357,-0.42897],[1.14362,0.240934,0.608168],[-0.10934,-0.447361,0.557978],[0.225602,0.103221,-0.739801],[-1.37136,-1.4402,0.375931],[-1.06187,0.749474,-0.245049],[-0.00523318,0.0303498,-0.148455],[-0.86813,1.01678,1.28592],[-0.459097,1.88984,0.767412],[-0.575146,0.0608843,1.30141],[-1.18549,1.09689,-1.30145],[1.19107,-0.905405,-0.236788],[0.0901797,0.507783,0.273965],[0.783867,0.264172,-0.65741],[0.178522,0.35078,0.764789],[-1.66886,-0.538324,-0.578473],[0.855213,0.648207,-1.46514],[-1.98358,0.0574239,-1.17582],[-0.874867,0.482408,0.0961098],[0.404443,-0.377967,-0.442957],[1.37856,2.46241,-1.13928],[1.66973,0.59457,0.0950701],[-0.895451,-0.256974,-0.926932],[0.94409,-0.614168,-0.689257],[1.72536,0.259705,-0.31505],[-0.189761,-1.14563,1.94323],[-0.73329,-0.0726335,-0.906038],[1.35781,-0.455147,-0.881534],[-0.822748,0.996858,-0.6448],[-0.441643,0.513453,0.789413],[-0.29726,0.408799,-0.200961],[-0.158102,1.46544,0.167234],[-1.32977,1.67208,0.178955],[-1.02811,-0.243807,-0.805068],[-0.733655,1.67501,0.0624835],[1.7559,-1.14885,-0.600233],[0.20725,0.27272,-0.646479],[-0.754561,-0.829499,-0.521688],[1.26979,1.1282,0.563463],[0.757681,-0.639358,0.0429487],[-1.12231,-1.18067,1.28913],[-0.19656,1.48928,0.589909],[-0.0200563,-0.0952821,0.508961],[-0.918347,-1.15953,2.27647],[-1.61513,-0.260637,-1.30071],[-0.556079,-0.230924,-0.309032],[0.523881,-1.14177,-1.81376]] start=0 timeStep=0.1 n=100
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 45-46

Case 2: Get a time series from a Process

.. GENERATED FROM PYTHON SOURCE LINES 46-50

.. code-block:: Python

    myProcess = ot.WhiteNoise(ot.Normal(3), myTimeGrid)
    myTimeSeries2 = myProcess.getRealization()
    myTimeSeries2






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>t</th><th>X0</th><th>X1</th><th>X2</th></tr>
      <tr><th>0</th><td>0</td><td>2.660796</td><td>-1.196338</td><td>1.454545</td></tr>
      <tr><th>1</th><td>0.1</td><td>-0.6581119</td><td>-0.198115</td><td>-0.1077526</td></tr>
      <tr><th>2</th><td>0.2</td><td>1.467174</td><td>0.3417027</td><td>2.128855</td></tr>
      <tr><th>3</th><td>0.3</td><td>-0.6646652</td><td>-0.2337471</td><td>-1.542807</td></tr>
      <tr><th>4</th><td>0.4</td><td>0.1421976</td><td>0.7893998</td><td>-0.9664206</td></tr>
      <tr><th>5</th><td>0.5</td><td>-0.6565181</td><td>-0.2610107</td><td>-0.6988949</td></tr>
      <tr><th>6</th><td>0.6</td><td>-0.5609799</td><td>-0.5522273</td><td>0.08546474</td></tr>
      <tr><th>7</th><td>0.7</td><td>-1.192458</td><td>-1.405937</td><td>1.23555</td></tr>
      <tr><th>8</th><td>0.8</td><td>1.985379</td><td>0.2677176</td><td>-0.03717564</td></tr>
      <tr><th>9</th><td>0.9</td><td>-0.1544173</td><td>0.3777203</td><td>-0.9403686</td></tr>
      <tr><th>10</th><td>1</td><td>0.02024702</td><td>1.483259</td><td>0.5226134</td></tr>
      <tr><th>11</th><td>1.1</td><td>0.9362566</td><td>0.9485092</td><td>1.014864</td></tr>
      <tr><th>12</th><td>1.2</td><td>-0.1470996</td><td>-0.6615771</td><td>-1.252669</td></tr>
      <tr><th>13</th><td>1.3</td><td>-0.8564671</td><td>-0.3522211</td><td>-1.845609</td></tr>
      <tr><th>14</th><td>1.4</td><td>-0.6418219</td><td>0.4162353</td><td>-1.045239</td></tr>
      <tr><th>15</th><td>1.5</td><td>0.4391752</td><td>-0.55968</td><td>1.340326</td></tr>
      <tr><th>16</th><td>1.6</td><td>-1.957189</td><td>-1.09163</td><td>-1.729026</td></tr>
      <tr><th>17</th><td>1.7</td><td>1.386704</td><td>-1.437634</td><td>-1.140833</td></tr>
      <tr><th>18</th><td>1.8</td><td>-0.7595135</td><td>-0.5349297</td><td>0.817813</td></tr>
      <tr><th>19</th><td>1.9</td><td>0.1139144</td><td>0.1234901</td><td>0.3384821</td></tr>
      <tr><th>20</th><td>2</td><td>0.9349424</td><td>-0.1952092</td><td>1.028641</td></tr>
      <tr><th>21</th><td>2.1</td><td>-1.369706</td><td>-0.4955811</td><td>0.05374242</td></tr>
      <tr><th>22</th><td>2.2</td><td>1.203462</td><td>0.007840524</td><td>-0.04345816</td></tr>
      <tr><th>23</th><td>2.3</td><td>-0.7913722</td><td>-0.3466522</td><td>0.382385</td></tr>
      <tr><th>24</th><td>2.4</td><td>0.7692548</td><td>0.867146</td><td>0.4911153</td></tr>
      <tr><th>25</th><td>2.5</td><td>1.671454</td><td>0.7293876</td><td>0.4516846</td></tr>
      <tr><th>26</th><td>2.6</td><td>-1.172885</td><td>-1.040145</td><td>0.09305005</td></tr>
      <tr><th>27</th><td>2.7</td><td>1.659821</td><td>-1.612009</td><td>-0.787575</td></tr>
      <tr><th>28</th><td>2.8</td><td>1.211711</td><td>-0.1545285</td><td>1.712965</td></tr>
      <tr><th>29</th><td>2.9</td><td>-0.09945337</td><td>-0.8691703</td><td>1.880589</td></tr>
      <tr><th>30</th><td>3</td><td>1.290859</td><td>-0.1806161</td><td>-1.022008</td></tr>
      <tr><th>31</th><td>3.1</td><td>0.07801353</td><td>-0.2765856</td><td>-0.9890891</td></tr>
      <tr><th>32</th><td>3.2</td><td>-0.5748256</td><td>-1.196682</td><td>1.042639</td></tr>
      <tr><th>33</th><td>3.3</td><td>0.1624459</td><td>-0.40639</td><td>-0.09335198</td></tr>
      <tr><th>34</th><td>3.4</td><td>-1.546903</td><td>1.495026</td><td>-0.9560901</td></tr>
      <tr><th>35</th><td>3.5</td><td>0.3397299</td><td>0.8830718</td><td>0.740906</td></tr>
      <tr><th>36</th><td>3.6</td><td>-1.246312</td><td>0.3575962</td><td>-0.5756764</td></tr>
      <tr><th>37</th><td>3.7</td><td>0.3831603</td><td>-0.9665719</td><td>0.8741813</td></tr>
      <tr><th>38</th><td>3.8</td><td>-0.7522336</td><td>1.324696</td><td>-0.303756</td></tr>
      <tr><th>39</th><td>3.9</td><td>-0.7956432</td><td>-0.04765299</td><td>0.750615</td></tr>
      <tr><th>40</th><td>4</td><td>0.2877417</td><td>1.910307</td><td>1.109356</td></tr>
      <tr><th>41</th><td>4.1</td><td>2.428132</td><td>-0.154967</td><td>0.03527304</td></tr>
      <tr><th>42</th><td>4.2</td><td>-0.3432878</td><td>-0.318129</td><td>0.3819136</td></tr>
      <tr><th>43</th><td>4.3</td><td>-1.313595</td><td>-0.02570042</td><td>0.2152936</td></tr>
      <tr><th>44</th><td>4.4</td><td>2.507267</td><td>-0.03055105</td><td>-1.49862</td></tr>
      <tr><th>45</th><td>4.5</td><td>-0.1019012</td><td>-1.562147</td><td>1.384385</td></tr>
      <tr><th>46</th><td>4.6</td><td>-1.977287</td><td>-0.4435687</td><td>-0.2750572</td></tr>
      <tr><th>47</th><td>4.7</td><td>0.4601163</td><td>-0.1055318</td><td>-1.355018</td></tr>
      <tr><th>48</th><td>4.8</td><td>-0.7276645</td><td>-0.1939597</td><td>-0.1739904</td></tr>
      <tr><th>49</th><td>4.9</td><td>1.561729</td><td>-0.1690278</td><td>0.875805</td></tr>
      <tr><th>50</th><td>5</td><td>0.006831309</td><td>0.09764236</td><td>-2.139707</td></tr>
      <tr><th>51</th><td>5.1</td><td>0.5888016</td><td>0.2313969</td><td>0.2241301</td></tr>
      <tr><th>52</th><td>5.2</td><td>-0.1316053</td><td>0.4564344</td><td>0.1867507</td></tr>
      <tr><th>53</th><td>5.3</td><td>1.042387</td><td>-0.2109152</td><td>2.404018</td></tr>
      <tr><th>54</th><td>5.4</td><td>1.532625</td><td>-1.329208</td><td>-0.1299667</td></tr>
      <tr><th>55</th><td>5.5</td><td>0.01807291</td><td>-0.8679303</td><td>0.826035</td></tr>
      <tr><th>56</th><td>5.6</td><td>-0.08421504</td><td>-1.720868</td><td>0.8134395</td></tr>
      <tr><th>57</th><td>5.7</td><td>-0.04963356</td><td>-0.1948953</td><td>0.8533024</td></tr>
      <tr><th>58</th><td>5.8</td><td>-0.3714875</td><td>-0.8637278</td><td>-3.573127</td></tr>
      <tr><th>59</th><td>5.9</td><td>-1.049874</td><td>-2.664894</td><td>-1.027197</td></tr>
      <tr><th>60</th><td>6</td><td>0.6401541</td><td>1.108904</td><td>-0.9281339</td></tr>
      <tr><th>61</th><td>6.1</td><td>0.5036413</td><td>-0.7491176</td><td>-1.466992</td></tr>
      <tr><th>62</th><td>6.2</td><td>0.4274742</td><td>-1.201179</td><td>0.8634039</td></tr>
      <tr><th>63</th><td>6.3</td><td>2.002146</td><td>-3.294567</td><td>0.8953529</td></tr>
      <tr><th>64</th><td>6.4</td><td>-1.073169</td><td>-0.1605033</td><td>-0.5656003</td></tr>
      <tr><th>65</th><td>6.5</td><td>-0.04733914</td><td>-0.8969688</td><td>-1.047336</td></tr>
      <tr><th>66</th><td>6.6</td><td>0.4966283</td><td>1.483649</td><td>0.8988695</td></tr>
      <tr><th>67</th><td>6.7</td><td>-0.2290473</td><td>0.0003688865</td><td>0.004295879</td></tr>
      <tr><th>68</th><td>6.8</td><td>0.2731896</td><td>-0.4802055</td><td>0.8005</td></tr>
      <tr><th>69</th><td>6.9</td><td>0.5420838</td><td>-0.7398699</td><td>0.1192626</td></tr>
      <tr><th>70</th><td>7</td><td>2.028085</td><td>-1.602532</td><td>2.196417</td></tr>
      <tr><th>71</th><td>7.1</td><td>-1.098864</td><td>0.8495031</td><td>-0.3156119</td></tr>
      <tr><th>72</th><td>7.2</td><td>0.5737604</td><td>-0.8994971</td><td>-0.1973163</td></tr>
      <tr><th>73</th><td>7.3</td><td>0.3342977</td><td>-0.538064</td><td>-0.9263961</td></tr>
      <tr><th>74</th><td>7.4</td><td>-0.6737314</td><td>-0.961442</td><td>1.311449</td></tr>
      <tr><th>75</th><td>7.5</td><td>-1.511777</td><td>0.084209</td><td>-0.5412895</td></tr>
      <tr><th>76</th><td>7.6</td><td>-1.922337</td><td>-0.755602</td><td>-0.9806995</td></tr>
      <tr><th>77</th><td>7.7</td><td>-0.3865337</td><td>0.6356002</td><td>0.1843213</td></tr>
      <tr><th>78</th><td>7.8</td><td>0.1785175</td><td>-1.319384</td><td>-0.4745397</td></tr>
      <tr><th>79</th><td>7.9</td><td>-1.599067</td><td>-1.180005</td><td>-0.6519869</td></tr>
      <tr><th>80</th><td>8</td><td>-0.3161024</td><td>-0.3590712</td><td>0.9643041</td></tr>
      <tr><th>81</th><td>8.1</td><td>1.006785</td><td>-0.3236537</td><td>0.9225707</td></tr>
      <tr><th>82</th><td>8.2</td><td>3.029492</td><td>0.374907</td><td>0.6094493</td></tr>
      <tr><th>83</th><td>8.3</td><td>0.6426709</td><td>-0.1377346</td><td>-2.000812</td></tr>
      <tr><th>84</th><td>8.4</td><td>-0.3646393</td><td>-0.8569488</td><td>-0.1467565</td></tr>
      <tr><th>85</th><td>8.5</td><td>0.5703259</td><td>-0.2746921</td><td>-0.04602159</td></tr>
      <tr><th>86</th><td>8.6</td><td>-0.4807408</td><td>-0.1772292</td><td>0.6318323</td></tr>
      <tr><th>87</th><td>8.7</td><td>1.817554</td><td>0.5543121</td><td>-0.677919</td></tr>
      <tr><th>88</th><td>8.8</td><td>0.2440817</td><td>2.890546</td><td>1.807278</td></tr>
      <tr><th>89</th><td>8.9</td><td>-0.3051043</td><td>0.9632029</td><td>-0.2668379</td></tr>
      <tr><th>90</th><td>9</td><td>1.082289</td><td>-0.3389345</td><td>1.23643</td></tr>
      <tr><th>91</th><td>9.1</td><td>-0.3373546</td><td>-0.7013045</td><td>0.2268402</td></tr>
      <tr><th>92</th><td>9.2</td><td>-0.3864071</td><td>0.1353338</td><td>0.7989838</td></tr>
      <tr><th>93</th><td>9.3</td><td>-0.2369638</td><td>-0.1600195</td><td>0.7663414</td></tr>
      <tr><th>94</th><td>9.4</td><td>0.5804432</td><td>0.1839728</td><td>1.230955</td></tr>
      <tr><th>95</th><td>9.5</td><td>1.673166</td><td>2.273248</td><td>1.41667</td></tr>
      <tr><th>96</th><td>9.6</td><td>-2.340079</td><td>2.342942</td><td>0.1141473</td></tr>
      <tr><th>97</th><td>9.7</td><td>0.7023087</td><td>2.065992</td><td>-1.003545</td></tr>
      <tr><th>98</th><td>9.8</td><td>1.617217</td><td>0.9434834</td><td>0.8990336</td></tr>
      <tr><th>99</th><td>9.9</td><td>0.4941704</td><td>-0.3220517</td><td>-1.073979</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 51-52

Get the number of values of the time series

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: Python

    myTimeSeries.getSize()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    100



.. GENERATED FROM PYTHON SOURCE LINES 55-56

Get the dimension of the values observed at each time

.. GENERATED FROM PYTHON SOURCE LINES 56-58

.. code-block:: Python

    myTimeSeries.getMesh().getDimension()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    1



.. GENERATED FROM PYTHON SOURCE LINES 59-60

Get the value :math:`X_i` at index :math:`i`

.. GENERATED FROM PYTHON SOURCE LINES 60-63

.. code-block:: Python

    i = 37
    print("Xi = ", myTimeSeries.getValueAtIndex(i))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Xi =  [0.160454,0.540924,0.0844227]




.. GENERATED FROM PYTHON SOURCE LINES 64-65

Get the time series at index :math:`i` : :math:`X_i`

.. GENERATED FROM PYTHON SOURCE LINES 65-68

.. code-block:: Python

    i = 37
    print("Xi = ", myTimeSeries[i])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Xi =  [0.160454,0.540924,0.0844227]




.. GENERATED FROM PYTHON SOURCE LINES 69-70

Get a the marginal value at index :math:`i` of the time series

.. GENERATED FROM PYTHON SOURCE LINES 70-76

.. code-block:: Python

    i = 37
    # get the time stamp:
    print("ti = ", myTimeSeries.getTimeGrid().getValue(i))
    # get the first component of the corresponding value :
    print("Xi1 = ", myTimeSeries[i, 0])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ti =  3.7
    Xi1 =  0.16045352231406165




.. GENERATED FROM PYTHON SOURCE LINES 77-78

Get all the values :math:`(X_1, \dots, X_n)` of the time series

.. GENERATED FROM PYTHON SOURCE LINES 78-80

.. code-block:: Python

    myTimeSeries.getValues()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>X0</th><th>X1</th><th>X2</th></tr>
      <tr><th>0</th><td>-1.133905</td><td>1.112527</td><td>1.361737</td></tr>
      <tr><th>1</th><td>-1.748088</td><td>0.3837129</td><td>-2.463121</td></tr>
      <tr><th>2</th><td>2.2449</td><td>-0.3404366</td><td>0.1638551</td></tr>
      <tr><th>3</th><td>-1.505503</td><td>-0.6012009</td><td>0.5559954</td></tr>
      <tr><th>4</th><td>-0.08873549</td><td>0.7028227</td><td>-0.1151957</td></tr>
      <tr><th>5</th><td>-0.7302121</td><td>-0.8054374</td><td>-0.5808096</td></tr>
      <tr><th>6</th><td>-0.4961746</td><td>1.09338</td><td>0.2496934</td></tr>
      <tr><th>7</th><td>-0.9010361</td><td>0.9058955</td><td>0.8936989</td></tr>
      <tr><th>8</th><td>0.1617282</td><td>0.3128931</td><td>-0.810711</td></tr>
      <tr><th>9</th><td>-1.869113</td><td>-0.3036632</td><td>0.3390516</td></tr>
      <tr><th>10</th><td>-0.3959267</td><td>0.3254265</td><td>-1.387814</td></tr>
      <tr><th>11</th><td>-0.2877688</td><td>0.03544463</td><td>-0.5539723</td></tr>
      <tr><th>12</th><td>-0.9954845</td><td>-2.062728</td><td>-0.7266087</td></tr>
      <tr><th>13</th><td>-0.4764893</td><td>0.2356493</td><td>-0.2702492</td></tr>
      <tr><th>14</th><td>0.4633562</td><td>1.315158</td><td>0.4948702</td></tr>
      <tr><th>15</th><td>0.5040203</td><td>-0.5399403</td><td>-1.205156</td></tr>
      <tr><th>16</th><td>0.01986152</td><td>-1.058964</td><td>-0.233806</td></tr>
      <tr><th>17</th><td>-1.420463</td><td>-1.120812</td><td>-0.7811584</td></tr>
      <tr><th>18</th><td>-0.0321276</td><td>0.1708999</td><td>-0.09908555</td></tr>
      <tr><th>19</th><td>-0.5385708</td><td>0.3428948</td><td>-0.7266897</td></tr>
      <tr><th>20</th><td>-0.1532207</td><td>-0.04023472</td><td>0.160775</td></tr>
      <tr><th>21</th><td>-0.2671712</td><td>-0.8807018</td><td>-1.037505</td></tr>
      <tr><th>22</th><td>-1.866229</td><td>-0.5569857</td><td>0.4500269</td></tr>
      <tr><th>23</th><td>-1.20641</td><td>0.080394</td><td>0.7198244</td></tr>
      <tr><th>24</th><td>1.997831</td><td>1.145812</td><td>0.3699865</td></tr>
      <tr><th>25</th><td>1.917432</td><td>0.4883116</td><td>-0.4229979</td></tr>
      <tr><th>26</th><td>0.7220289</td><td>-2.501513</td><td>1.813368</td></tr>
      <tr><th>27</th><td>-0.8301219</td><td>-0.6497097</td><td>-0.3062789</td></tr>
      <tr><th>28</th><td>-0.963223</td><td>-0.5580627</td><td>0.1758445</td></tr>
      <tr><th>29</th><td>-1.281186</td><td>-0.2108173</td><td>-0.5645657</td></tr>
      <tr><th>30</th><td>1.002999</td><td>-3.751748</td><td>-0.2697419</td></tr>
      <tr><th>31</th><td>-0.1334961</td><td>0.7944264</td><td>-0.06926034</td></tr>
      <tr><th>32</th><td>0.4459472</td><td>1.356721</td><td>1.312483</td></tr>
      <tr><th>33</th><td>0.1982255</td><td>0.04875242</td><td>-1.574155</td></tr>
      <tr><th>34</th><td>1.820614</td><td>-0.9992491</td><td>-0.2431834</td></tr>
      <tr><th>35</th><td>0.01187253</td><td>-0.4807403</td><td>0.4076557</td></tr>
      <tr><th>36</th><td>0.6456317</td><td>0.0450102</td><td>0.2462841</td></tr>
      <tr><th>37</th><td>0.1604535</td><td>0.5409241</td><td>0.0844227</td></tr>
      <tr><th>38</th><td>0.5059269</td><td>1.260572</td><td>-0.2913512</td></tr>
      <tr><th>39</th><td>1.338827</td><td>1.617066</td><td>-0.5690531</td></tr>
      <tr><th>40</th><td>-0.1107998</td><td>0.347105</td><td>0.8363701</td></tr>
      <tr><th>41</th><td>-0.01282975</td><td>-1.241733</td><td>-0.8177871</td></tr>
      <tr><th>42</th><td>1.510724</td><td>-1.351504</td><td>-2.292936</td></tr>
      <tr><th>43</th><td>-2.611044</td><td>1.558759</td><td>-0.7685687</td></tr>
      <tr><th>44</th><td>-0.4294185</td><td>-0.9445464</td><td>0.8778585</td></tr>
      <tr><th>45</th><td>0.07862686</td><td>-1.950738</td><td>-1.758987</td></tr>
      <tr><th>46</th><td>-0.1269775</td><td>-1.7022</td><td>0.9701061</td></tr>
      <tr><th>47</th><td>-0.7313707</td><td>0.5280016</td><td>0.1070765</td></tr>
      <tr><th>48</th><td>0.08741144</td><td>-0.8087333</td><td>1.32812</td></tr>
      <tr><th>49</th><td>-1.501038</td><td>0.08980661</td><td>0.05323803</td></tr>
      <tr><th>50</th><td>-1.684969</td><td>-0.8556234</td><td>0.7253736</td></tr>
      <tr><th>51</th><td>1.09379</td><td>-2.115175</td><td>0.3271265</td></tr>
      <tr><th>52</th><td>0.1149783</td><td>-0.9576078</td><td>0.8582113</td></tr>
      <tr><th>53</th><td>-1.096836</td><td>1.36357</td><td>-0.4289703</td></tr>
      <tr><th>54</th><td>1.14362</td><td>0.2409335</td><td>0.6081685</td></tr>
      <tr><th>55</th><td>-0.1093404</td><td>-0.4473608</td><td>0.5579778</td></tr>
      <tr><th>56</th><td>0.225602</td><td>0.1032207</td><td>-0.7398007</td></tr>
      <tr><th>57</th><td>-1.371359</td><td>-1.440197</td><td>0.3759314</td></tr>
      <tr><th>58</th><td>-1.061869</td><td>0.7494743</td><td>-0.2450492</td></tr>
      <tr><th>59</th><td>-0.00523318</td><td>0.03034977</td><td>-0.1484553</td></tr>
      <tr><th>60</th><td>-0.8681304</td><td>1.016783</td><td>1.285919</td></tr>
      <tr><th>61</th><td>-0.4590967</td><td>1.889837</td><td>0.7674116</td></tr>
      <tr><th>62</th><td>-0.575146</td><td>0.0608843</td><td>1.301409</td></tr>
      <tr><th>63</th><td>-1.185494</td><td>1.096892</td><td>-1.301454</td></tr>
      <tr><th>64</th><td>1.191066</td><td>-0.9054046</td><td>-0.2367878</td></tr>
      <tr><th>65</th><td>0.09017969</td><td>0.507783</td><td>0.2739646</td></tr>
      <tr><th>66</th><td>0.783867</td><td>0.2641723</td><td>-0.6574099</td></tr>
      <tr><th>67</th><td>0.1785216</td><td>0.3507797</td><td>0.7647894</td></tr>
      <tr><th>68</th><td>-1.668856</td><td>-0.5383241</td><td>-0.5784726</td></tr>
      <tr><th>69</th><td>0.8552125</td><td>0.6482075</td><td>-1.465136</td></tr>
      <tr><th>70</th><td>-1.983584</td><td>0.05742389</td><td>-1.175817</td></tr>
      <tr><th>71</th><td>-0.8748669</td><td>0.4824077</td><td>0.09610981</td></tr>
      <tr><th>72</th><td>0.4044427</td><td>-0.3779673</td><td>-0.4429574</td></tr>
      <tr><th>73</th><td>1.378562</td><td>2.462412</td><td>-1.139285</td></tr>
      <tr><th>74</th><td>1.669727</td><td>0.5945702</td><td>0.09507014</td></tr>
      <tr><th>75</th><td>-0.8954513</td><td>-0.2569742</td><td>-0.9269321</td></tr>
      <tr><th>76</th><td>0.9440901</td><td>-0.6141675</td><td>-0.6892566</td></tr>
      <tr><th>77</th><td>1.725358</td><td>0.2597048</td><td>-0.3150498</td></tr>
      <tr><th>78</th><td>-0.1897613</td><td>-1.145627</td><td>1.943233</td></tr>
      <tr><th>79</th><td>-0.7332897</td><td>-0.07263354</td><td>-0.9060376</td></tr>
      <tr><th>80</th><td>1.357811</td><td>-0.4551472</td><td>-0.8815338</td></tr>
      <tr><th>81</th><td>-0.8227476</td><td>0.9968577</td><td>-0.6448003</td></tr>
      <tr><th>82</th><td>-0.4416427</td><td>0.5134532</td><td>0.789413</td></tr>
      <tr><th>83</th><td>-0.2972604</td><td>0.4087989</td><td>-0.2009614</td></tr>
      <tr><th>84</th><td>-0.1581021</td><td>1.46544</td><td>0.1672343</td></tr>
      <tr><th>85</th><td>-1.329774</td><td>1.672084</td><td>0.1789554</td></tr>
      <tr><th>86</th><td>-1.028114</td><td>-0.2438069</td><td>-0.8050675</td></tr>
      <tr><th>87</th><td>-0.7336551</td><td>1.675009</td><td>0.06248352</td></tr>
      <tr><th>88</th><td>1.755898</td><td>-1.148846</td><td>-0.6002333</td></tr>
      <tr><th>89</th><td>0.2072495</td><td>0.2727196</td><td>-0.6464794</td></tr>
      <tr><th>90</th><td>-0.7545611</td><td>-0.8294986</td><td>-0.5216875</td></tr>
      <tr><th>91</th><td>1.269791</td><td>1.128204</td><td>0.5634626</td></tr>
      <tr><th>92</th><td>0.7576808</td><td>-0.6393578</td><td>0.04294874</td></tr>
      <tr><th>93</th><td>-1.122311</td><td>-1.180669</td><td>1.289127</td></tr>
      <tr><th>94</th><td>-0.1965599</td><td>1.489277</td><td>0.5899094</td></tr>
      <tr><th>95</th><td>-0.02005632</td><td>-0.09528212</td><td>0.5089608</td></tr>
      <tr><th>96</th><td>-0.9183473</td><td>-1.159533</td><td>2.276473</td></tr>
      <tr><th>97</th><td>-1.615131</td><td>-0.2606369</td><td>-1.30071</td></tr>
      <tr><th>98</th><td>-0.5560794</td><td>-0.2309245</td><td>-0.3090319</td></tr>
      <tr><th>99</th><td>0.5238815</td><td>-1.141774</td><td>-1.813759</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 81-83

Compute the temporal Mean
It corresponds to the mean of the values of the time series

.. GENERATED FROM PYTHON SOURCE LINES 83-85

.. code-block:: Python

    myTimeSeries.getInputMean()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=Point name=Unnamed dimension=3 values=[-0.10631,-0.026402,-0.0633931]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 86-87

Draw the marginal :math:`i` of the time series using linear interpolation

.. GENERATED FROM PYTHON SOURCE LINES 87-90

.. code-block:: Python

    graph = myTimeSeries.drawMarginal(0)
    view = viewer.View(graph)




.. image-sg:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_001.png
   :alt: Unnamed - 0 marginal
   :srcset: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 91-92

With no interpolation

.. GENERATED FROM PYTHON SOURCE LINES 92-95

.. code-block:: Python

    graph = myTimeSeries.drawMarginal(0, False)
    view = viewer.View(graph)
    plt.show()



.. image-sg:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_002.png
   :alt: Unnamed - 0 marginal
   :srcset: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_002.png
   :class: sphx-glr-single-img






.. _sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_timeseries_manipulation.ipynb <plot_timeseries_manipulation.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_timeseries_manipulation.py <plot_timeseries_manipulation.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_timeseries_manipulation.zip <plot_timeseries_manipulation.zip>`
